@@ -1,8 +1,8 @@
-AUX clementine-0.5.1_automagic.patch 3502 RMD160 d41e9e71a94e04bb4af760d76025912dcd0dbe3a SHA1 8b67f43ebd30810ea3a50e5ae688e0031a3d1828 SHA256 599eadfb657ddfce902edad9991b79d6128a114338ffa6d197b805a5835eb235
+AUX clementine-0.5.3-automagic.patch 3502 RMD160 d41e9e71a94e04bb4af760d76025912dcd0dbe3a SHA1 8b67f43ebd30810ea3a50e5ae688e0031a3d1828 SHA256 599eadfb657ddfce902edad9991b79d6128a114338ffa6d197b805a5835eb235
 DIST clementine-0.4.2.tar.gz 4670893 RMD160 e6da4be1f4d6d1f193abe0f2b7afa1270e7fc4cc SHA1 5bbec64089226d7ebf1719fe693990407a3b5a59 SHA256 07934347ea4922997524fca3bc5895d7accd52cf22f987922e814769e66996be
-DIST clementine-0.5.1.tar.gz 5235272 RMD160 549c1f00edc408abbd11d5f8cd6d663be98196b1 SHA1 97ef81cf35ffa5f5f0264f6fd0dd57a49dbe5cca SHA256 1794be993d3522abd68b91d80d63e4c49537b57f8f5e9b8d4843fd3394a4aa51
+DIST clementine-0.5.3.tar.gz 5236224 RMD160 77765d09ea1c1639a45b0cd7bef86592642255df SHA1 20657161c1098ab430bd1451f67fb80d767656de SHA256 0704911c4a2ad38bd2154120db24e95c52bec3d456766e0f29e1f60b0a39641d
 EBUILD clementine-0.4.2.ebuild 2189 RMD160 295eb69564bea2fd4f3d32ce4be813a80af04283 SHA1 4c0f60ca1293c987169e54ff4517b638b8f0c69c SHA256 8bb79743e40303042f50855ad8878bf931b7041ca8387c15100b1062db0328dc
-EBUILD clementine-0.5.1.ebuild 2649 RMD160 2fd3cebfc7d388824ef221adf417baa03ba6220d SHA1 528c20d68baf22e67c540dedc843e8a4ebdde0be SHA256 c3db3e325c09f54af2bd2af2f05eacbdb24ebb9d82d69d8fc8308387a2ac650b
+EBUILD clementine-0.5.3.ebuild 2655 RMD160 68f7791e271400358cf7d24035c6db79dbccc09d SHA1 4afc31151f582d1681d1e579b4283946483a7874 SHA256 877acb0bb55ec271ea521aa65d3b7c9bf6d90d0e139dccc4fa6f584eae637086
 EBUILD clementine-9999.ebuild 2559 RMD160 d69cbe271fddfaa67c9e78a48c2e9a9324809ec2 SHA1 8916d81a3460c9bb6c5012ac877a9e1cedb8fec0 SHA256 095d6b78550140fdaea35bf67dce9df8251a5d43838348715efa94082fa3904d
-MISC ChangeLog 1346 RMD160 9f7f6612a80ed8e2b72b61f36e086d85df8d276f SHA1 a34e78c8f6a4b31e339aeb183d48e04131c271c5 SHA256 94bdddc7677f18ef6588f3793de1211cbfbdf34e68fa7348757e69221cb0933f
+MISC ChangeLog 1576 RMD160 bdd89d98341720ff2f2d2f21452fc04fafc8edfb SHA1 13d9381c8026e2e9bee2ec587552c2594bcd77a2 SHA256 19b409210df33c6130d684043308662548d362b06a6d0ae6d9cb8d52d055af9d
 MISC metadata.xml 615 RMD160 e5e412a7215c6911aefc8143530ee3761868e661 SHA1 9204f5e4ff84d0f75419d424f8b927866e9a98ac SHA256 d845fc100a4760a9a5e89259d2805f111f6858e335ca01938faa87d42da7a91d
