@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*clementine-0.5.3 (30 Sep 2010)
+
+  30 Sep 2010; Nikoli <nikoli@lavabit.com> -clementine-0.5.1.ebuild,
+  -files/clementine-0.5.1_automagic.patch, +clementine-0.5.3.ebuild,
+  +files/clementine-0.5.3-automagic.patch:
+  version bump
+
 *clementine-0.5.1 (21 Sep 2010)
 
   21 Sep 2010; Nikoli <nikoli@lavabit.com> +clementine-0.5.1.ebuild,
